// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/VehicleResults/VehicleResult/LookupInfo/ViolationSummary NewViolationsSincePreviousLookupNewStyleDisplay smoke-test 1`] = `
<div class="site-container-wrapper">
  <div class="site-container container-fluid">
    <main>
      <div class="row">
        <div class="col-md-12 vehicle-lookup-content-container new-style">
          <div class="vehicles new-style">
            <div class="vehicle card">
              <ul class="list-group-flush list-group">
                <li class="no-padding list-group-item">
                  <div class="row">
                    <div class="summary-section col-xs-12 col-sm-6">
                      <div class="summary-box new-style">
                        <div class="vehicle-info-group vehicle-violations">
                          <div class="keys lookup-info">
                            <div>
                              Violations:
                            </div>
                            <div class="violation-count-aspects">
                              <div class="violation-count-aspect-header">
                                Type:
                              </div>
                              <div class="violation-count-aspect">
                                Parking:
                              </div>
                            </div>
                            <div class="violation-count-aspects">
                              <div class="violation-count-aspect-header">
                                Borough:
                              </div>
                              <div class="violation-count-aspect">
                                Brooklyn:
                              </div>
                            </div>
                          </div>
                          <div class="values lookup-info">
                            <div class="violation-total">
                              (1 new) 3
                            </div>
                            <div class="violation-type-counts">
                              <div class="violation-count">
                                &nbsp;
                              </div>
                              <div class="violation-count">
                                3
                              </div>
                            </div>
                            <div class="violation-borough-counts">
                              <div class="violation-count">
                                &nbsp;
                              </div>
                              <div class="violation-count">
                                3
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Components/VehicleResults/VehicleResult/LookupInfo/ViolationSummary NewViolationsSincePreviousLookupOldStyleDisplay smoke-test 1`] = `
<div class="site-container-wrapper">
  <div class="site-container container-fluid">
    <main>
      <div class="row">
        <div class="col-md-12 vehicle-lookup-content-container ">
          <div class="vehicles ">
            <div class="vehicle card">
              <ul class="list-group-flush list-group">
                <li class="no-padding list-group-item">
                  <div class="row">
                    <div class="summary-section col-xs-12 col-sm-6">
                      <div class="summary-box ">
                        <div class="vehicle-info-group vehicle-violations">
                          <div class="keys lookup-info">
                            <div>
                              Violations:
                            </div>
                            <div class="violation-count-aspects">
                              <div class="violation-count-aspect-header">
                                Type:
                              </div>
                              <div class="violation-count-aspect">
                                Parking:
                              </div>
                            </div>
                            <div class="violation-count-aspects">
                              <div class="violation-count-aspect-header">
                                Borough:
                              </div>
                              <div class="violation-count-aspect">
                                Brooklyn:
                              </div>
                            </div>
                          </div>
                          <div class="values lookup-info">
                            <div class="violation-total">
                              (1 new) 3
                            </div>
                            <div class="violation-type-counts">
                              <div class="violation-count">
                                &nbsp;
                              </div>
                              <div class="violation-count">
                                3
                              </div>
                            </div>
                            <div class="violation-borough-counts">
                              <div class="violation-count">
                                &nbsp;
                              </div>
                              <div class="violation-count">
                                3
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Components/VehicleResults/VehicleResult/LookupInfo/ViolationSummary NoViolationsNewStyleDisplay smoke-test 1`] = `
<div class="site-container-wrapper">
  <div class="site-container container-fluid">
    <main>
      <div class="row">
        <div class="col-md-12 vehicle-lookup-content-container new-style">
          <div class="vehicles new-style">
            <div class="vehicle card">
              <ul class="list-group-flush list-group">
                <li class="no-padding list-group-item">
                  <div class="row">
                    <div class="summary-section col-xs-12 col-sm-6">
                      <div class="summary-box new-style">
                        <div class="vehicle-info-group vehicle-violations">
                          <div class="keys lookup-info">
                            <div>
                              Violations:
                            </div>
                          </div>
                          <div class="values lookup-info">
                            <div class="violation-total">
                              0
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Components/VehicleResults/VehicleResult/LookupInfo/ViolationSummary NoViolationsOldStyleDisplay smoke-test 1`] = `
<div class="site-container-wrapper">
  <div class="site-container container-fluid">
    <main>
      <div class="row">
        <div class="col-md-12 vehicle-lookup-content-container ">
          <div class="vehicles ">
            <div class="vehicle card">
              <ul class="list-group-flush list-group">
                <li class="no-padding list-group-item">
                  <div class="row">
                    <div class="summary-section col-xs-12 col-sm-6">
                      <div class="summary-box ">
                        <div class="vehicle-info-group vehicle-violations">
                          <div class="keys lookup-info">
                            <div>
                              Violations:
                            </div>
                          </div>
                          <div class="values lookup-info">
                            <div class="violation-total">
                              0
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Components/VehicleResults/VehicleResult/LookupInfo/ViolationSummary ViolationsNewStyleDisplay smoke-test 1`] = `
<div class="site-container-wrapper">
  <div class="site-container container-fluid">
    <main>
      <div class="row">
        <div class="col-md-12 vehicle-lookup-content-container new-style">
          <div class="vehicles new-style">
            <div class="vehicle card">
              <ul class="list-group-flush list-group">
                <li class="no-padding list-group-item">
                  <div class="row">
                    <div class="summary-section col-xs-12 col-sm-6">
                      <div class="summary-box new-style">
                        <div class="vehicle-info-group vehicle-violations">
                          <div class="keys lookup-info">
                            <div>
                              Violations:
                            </div>
                            <div class="violation-count-aspects">
                              <div class="violation-count-aspect-header">
                                Type:
                              </div>
                              <div class="violation-count-aspect">
                                Parking:
                              </div>
                            </div>
                            <div class="violation-count-aspects">
                              <div class="violation-count-aspect-header">
                                Borough:
                              </div>
                              <div class="violation-count-aspect">
                                Brooklyn:
                              </div>
                            </div>
                          </div>
                          <div class="values lookup-info">
                            <div class="violation-total">
                              3
                            </div>
                            <div class="violation-type-counts">
                              <div class="violation-count">
                                &nbsp;
                              </div>
                              <div class="violation-count">
                                3
                              </div>
                            </div>
                            <div class="violation-borough-counts">
                              <div class="violation-count">
                                &nbsp;
                              </div>
                              <div class="violation-count">
                                3
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Components/VehicleResults/VehicleResult/LookupInfo/ViolationSummary ViolationsOldStyleDisplay smoke-test 1`] = `
<div class="site-container-wrapper">
  <div class="site-container container-fluid">
    <main>
      <div class="row">
        <div class="col-md-12 vehicle-lookup-content-container ">
          <div class="vehicles ">
            <div class="vehicle card">
              <ul class="list-group-flush list-group">
                <li class="no-padding list-group-item">
                  <div class="row">
                    <div class="summary-section col-xs-12 col-sm-6">
                      <div class="summary-box ">
                        <div class="vehicle-info-group vehicle-violations">
                          <div class="keys lookup-info">
                            <div>
                              Violations:
                            </div>
                            <div class="violation-count-aspects">
                              <div class="violation-count-aspect-header">
                                Type:
                              </div>
                              <div class="violation-count-aspect">
                                Parking:
                              </div>
                            </div>
                            <div class="violation-count-aspects">
                              <div class="violation-count-aspect-header">
                                Borough:
                              </div>
                              <div class="violation-count-aspect">
                                Brooklyn:
                              </div>
                            </div>
                          </div>
                          <div class="values lookup-info">
                            <div class="violation-total">
                              3
                            </div>
                            <div class="violation-type-counts">
                              <div class="violation-count">
                                &nbsp;
                              </div>
                              <div class="violation-count">
                                3
                              </div>
                            </div>
                            <div class="violation-borough-counts">
                              <div class="violation-count">
                                &nbsp;
                              </div>
                              <div class="violation-count">
                                3
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;
